syntax = "proto3";
package book;

// Définition du message Book
message Book {
    string id = 1;
    string title = 2;
    string description = 3;
    // Ajouter d'autres champs de données pour les livres au besoin
}

// Définition des messages de requête et de réponse pour les méthodes
message GetBookRequest {
    string book_id = 1;
}

message GetBookResponse {
    Book book = 1;
}

message SearchBooksRequest {
    string query = 1;
}

message SearchBooksResponse {
    repeated Book books = 1;
}

// Définition du service de livres
service BookService {
    rpc GetBook(GetBookRequest) returns (GetBookResponse);
    rpc SearchBooks(SearchBooksRequest) returns (SearchBooksResponse);
    // Ajouter d'autres méthodes au besoin
}
